Bearer added
